force-app/main/default/objects/Asset_Location_Audit__c/Asset_Location_Audit__c.object-meta.xml
<CustomObject>
    <description>Records a field engineer QR scan session performed at a customer location.</description>
    <label>Asset Location Audit</label>
    <nameField>
        <displayFormat>AUD-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Location Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>