force-app/main/default/objects/Asset_Location_Audit__c/fields/Anomaly_Count__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Anomaly Count</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>