force-app/main/default/objects/Asset_Location_Audit__c/fields/Applied_Radius_Meters__c.field-meta.xml
<CustomField>
    <fullName>Applied_Radius_Meters__c</fullName>
    <description>Snapshot of the geofence radius applied when the mobile audit was finalized.</description>
    <label>Applied Radius Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>