force-app/main/default/objects/Asset_Location_Audit__c/fields/Audit_Mode__c.field-meta.xml
<CustomField>
    <fullName>Audit_Mode__c</fullName>
    <label>Audit Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Spot Check</fullName><default>true</default><label>Spot Check</label></value>
            <value><fullName>Complete Inventory</fullName><default>false</default><label>Complete Inventory</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>