force-app/main/default/objects/Asset_Location_Audit__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <label>Completed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>