force-app/main/default/objects/Asset_Location_Audit__c/fields/Device_Accuracy_Meters__c.field-meta.xml
<CustomField>
    <fullName>Device_Accuracy_Meters__c</fullName>
    <description>Accuracy radius in metres reported by the device location service.</description>
    <label>Device Accuracy Meters</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>