force-app/main/default/objects/Asset_Location_Audit__c/fields/Device_Geo_Captured_At__c.field-meta.xml
<CustomField>
    <fullName>Device_Geo_Captured_At__c</fullName>
    <description>Timestamp supplied with the mobile device geolocation reading.</description>
    <label>Device Geo Captured At</label>
    <type>DateTime</type>
</CustomField>