force-app/main/default/objects/Asset_Location_Audit__c/fields/Device_Location__c.field-meta.xml
<CustomField>
    <fullName>Device_Location__c</fullName>
    <description>Latitude and longitude captured from the engineer's mobile device when the audit was finalized.</description>
    <label>Device Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>