force-app/main/default/objects/Asset_Location_Audit__c/fields/Expected_Location__c.field-meta.xml
<CustomField>
    <fullName>Expected_Location__c</fullName>
    <description>Snapshot of the stored Location coordinates used for this audit's GPS comparison.</description>
    <label>Expected Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>