force-app/main/default/objects/Asset_Location_Audit__c/fields/Geo_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Geo_Validation_Status__c</fullName>
    <label>Geo Validation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Within Tolerance</fullName><default>true</default><label>Within Tolerance</label></value>
            <value><fullName>Outside Tolerance</fullName><default>false</default><label>Outside Tolerance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>