force-app/main/default/objects/Asset_Location_Audit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>NewMBD Location record at which the engineer performed the scan.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Asset Location Audits</relationshipLabel>
    <relationshipName>Asset_Location_Audits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>