force-app/main/default/objects/Asset_Location_Audit__c/fields/Location_Distance_Meters__c.field-meta.xml
<CustomField>
    <fullName>Location_Distance_Meters__c</fullName>
    <description>Calculated distance in metres between the captured device location and stored Salesforce Location coordinates.</description>
    <label>Location Distance Meters</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>