force-app/main/default/objects/Asset_Location_Audit__c/fields/Scanned_Count__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scanned Count</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>