force-app/main/default/objects/Asset_Location_Audit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Completed</fullName><default>true</default><label>Completed</label></value>
            <value><fullName>Completed with Anomalies</fullName><default>false</default><label>Completed with Anomalies</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>